[package]
name = "dbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8"
lazy_static = "1.4.0"
itertools = "0.10.3"
sysinfo = "0.29.0"
hostname = "0.3.1"